// <auto-generated />
using System;
using System.Text.Json;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using ShippingOrchestrator.Infrastructure.Persistence;

#nullable disable

namespace ShippingOrchestrator.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(OrchestratorDbContext))]
    [Migration("20260426110815_Onboarding")]
    partial class Onboarding
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("orchestrator")
                .HasAnnotation("ProductVersion", "10.0.7")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("ShippingOrchestrator.Domain.Connections.CarrierAssignment", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("CarrierCode")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("carrier_code");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.PrimitiveCollection<string[]>("DestinationCountries")
                        .IsRequired()
                        .HasColumnType("text[]")
                        .HasColumnName("destination_countries");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.PrimitiveCollection<string[]>("OriginCountries")
                        .IsRequired()
                        .HasColumnType("text[]")
                        .HasColumnName("origin_countries");

                    b.Property<int>("Priority")
                        .HasColumnType("integer")
                        .HasColumnName("priority");

                    b.Property<Guid>("TenantId")
                        .HasColumnType("uuid")
                        .HasColumnName("tenant_id");

                    b.Property<DateTimeOffset>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.HasKey("Id");

                    b.HasIndex("TenantId");

                    b.HasIndex("TenantId", "CarrierCode")
                        .IsUnique();

                    b.ToTable("carrier_assignments", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Connections.EcommerceConnection", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<byte[]>("CredentialsCipher")
                        .IsRequired()
                        .HasColumnType("bytea")
                        .HasColumnName("credentials_cipher");

                    b.Property<string>("ExternalAccountId")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)")
                        .HasColumnName("external_account_id");

                    b.Property<DateTimeOffset>("InstalledAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("installed_at");

                    b.Property<DateTimeOffset?>("LastSyncAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_sync_at");

                    b.Property<string>("PlatformCode")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("platform_code");

                    b.Property<Guid>("TenantId")
                        .HasColumnType("uuid")
                        .HasColumnName("tenant_id");

                    b.HasKey("Id");

                    b.HasIndex("TenantId");

                    b.HasIndex("TenantId", "PlatformCode", "ExternalAccountId")
                        .IsUnique();

                    b.ToTable("ecommerce_connections", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Onboarding.OnboardingProcess", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset?>("CompletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("completed_at");

                    b.Property<string>("ContactEmail")
                        .HasMaxLength(254)
                        .HasColumnType("character varying(254)")
                        .HasColumnName("contact_email");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("FlowCode")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("flow_code");

                    b.Property<string>("StartedByStaffUserId")
                        .HasMaxLength(128)
                        .HasColumnType("character varying(128)")
                        .HasColumnName("started_by_staff_user_id");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)")
                        .HasColumnName("status");

                    b.Property<Guid?>("TenantId")
                        .HasColumnType("uuid")
                        .HasColumnName("tenant_id");

                    b.Property<DateTimeOffset>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.Property<uint>("Version")
                        .IsConcurrencyToken()
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("xid")
                        .HasColumnName("xmin");

                    b.HasKey("Id");

                    b.HasIndex("TenantId");

                    b.HasIndex("FlowCode", "Status");

                    b.ToTable("onboarding_processes", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Onboarding.OnboardingStepRecord", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset?>("AwaitingExpiresAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("awaiting_expires_at");

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("code");

                    b.Property<JsonDocument>("CollectedPayload")
                        .HasColumnType("jsonb")
                        .HasColumnName("collected_payload");

                    b.Property<DateTimeOffset?>("CompletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("completed_at");

                    b.Property<string>("ExternalCorrelationId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)")
                        .HasColumnName("external_correlation_id");

                    b.Property<string>("FailureReason")
                        .HasMaxLength(2048)
                        .HasColumnType("character varying(2048)")
                        .HasColumnName("failure_reason");

                    b.Property<Guid>("ProcessId")
                        .HasColumnType("uuid")
                        .HasColumnName("process_id");

                    b.Property<JsonDocument>("ResultPayload")
                        .HasColumnType("jsonb")
                        .HasColumnName("result_payload");

                    b.Property<int>("Sequence")
                        .HasColumnType("integer")
                        .HasColumnName("sequence");

                    b.Property<DateTimeOffset?>("StartedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("started_at");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)")
                        .HasColumnName("status");

                    b.HasKey("Id");

                    b.HasIndex("ExternalCorrelationId");

                    b.HasIndex("ProcessId", "Code")
                        .IsUnique();

                    b.ToTable("onboarding_steps", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.Shipment", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid?>("BatchId")
                        .HasColumnType("uuid")
                        .HasColumnName("batch_id");

                    b.Property<string>("CarrierCode")
                        .HasMaxLength(64)
                        .HasColumnType("character varying(64)")
                        .HasColumnName("carrier_code");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("FailureReason")
                        .HasMaxLength(1024)
                        .HasColumnType("character varying(1024)")
                        .HasColumnName("failure_reason");

                    b.Property<string>("From")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("from_address");

                    b.Property<string>("LabelUri")
                        .HasMaxLength(1024)
                        .HasColumnType("character varying(1024)")
                        .HasColumnName("label_uri");

                    b.Property<string>("Parcel")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("parcel");

                    b.Property<string>("PreferredService")
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)")
                        .HasColumnName("preferred_service");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)")
                        .HasColumnName("status");

                    b.Property<Guid>("TenantId")
                        .HasColumnType("uuid")
                        .HasColumnName("tenant_id");

                    b.Property<string>("To")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("to_address");

                    b.Property<string>("TrackingNumber")
                        .HasMaxLength(128)
                        .HasColumnType("character varying(128)")
                        .HasColumnName("tracking_number");

                    b.Property<DateTimeOffset>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.HasKey("Id");

                    b.HasIndex("BatchId");

                    b.HasIndex("TenantId", "Status");

                    b.ToTable("shipments", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.ShipmentBatch", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTimeOffset?>("CompletedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("completed_at");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("IdempotencyKey")
                        .HasMaxLength(128)
                        .HasColumnType("character varying(128)")
                        .HasColumnName("idempotency_key");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(24)
                        .HasColumnType("character varying(24)")
                        .HasColumnName("status");

                    b.Property<Guid>("TenantId")
                        .HasColumnType("uuid")
                        .HasColumnName("tenant_id");

                    b.HasKey("Id");

                    b.HasIndex("TenantId", "IdempotencyKey")
                        .IsUnique();

                    b.HasIndex("TenantId", "Status");

                    b.ToTable("shipment_batches", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.ShipmentBatchItem", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("BatchId")
                        .HasColumnType("uuid")
                        .HasColumnName("batch_id");

                    b.Property<string>("FailureReason")
                        .HasMaxLength(1024)
                        .HasColumnType("character varying(1024)")
                        .HasColumnName("failure_reason");

                    b.Property<int>("OrdinalIndex")
                        .HasColumnType("integer")
                        .HasColumnName("ordinal_index");

                    b.Property<DateTimeOffset?>("ResolvedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("resolved_at");

                    b.Property<Guid>("ShipmentId")
                        .HasColumnType("uuid")
                        .HasColumnName("shipment_id");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)")
                        .HasColumnName("status");

                    b.HasKey("Id");

                    b.HasIndex("ShipmentId");

                    b.HasIndex("BatchId", "OrdinalIndex")
                        .IsUnique();

                    b.ToTable("shipment_batch_items", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.ShipmentLineage", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Actor")
                        .IsRequired()
                        .HasMaxLength(128)
                        .HasColumnType("character varying(128)")
                        .HasColumnName("actor");

                    b.Property<string>("FromStatus")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)")
                        .HasColumnName("from_status");

                    b.Property<DateTimeOffset>("OccurredAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("occurred_at");

                    b.Property<string>("Reason")
                        .HasMaxLength(1024)
                        .HasColumnType("character varying(1024)")
                        .HasColumnName("reason");

                    b.Property<string>("RuleAttribution")
                        .HasMaxLength(1024)
                        .HasColumnType("character varying(1024)")
                        .HasColumnName("rule_attribution");

                    b.Property<Guid>("ShipmentId")
                        .HasColumnType("uuid")
                        .HasColumnName("shipment_id");

                    b.Property<string>("ToStatus")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("character varying(32)")
                        .HasColumnName("to_status");

                    b.HasKey("Id");

                    b.HasIndex("ShipmentId");

                    b.ToTable("shipment_lineage", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Tenancy.Tenant", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("ClientType")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)")
                        .HasColumnName("client_type");

                    b.Property<string>("ContactEmail")
                        .HasMaxLength(254)
                        .HasColumnType("character varying(254)")
                        .HasColumnName("contact_email");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("DisplayName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("display_name");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(16)
                        .HasColumnType("character varying(16)")
                        .HasColumnName("status");

                    b.Property<DateTimeOffset>("UpdatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at");

                    b.HasKey("Id");

                    b.ToTable("tenants", "orchestrator");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Onboarding.OnboardingStepRecord", b =>
                {
                    b.HasOne("ShippingOrchestrator.Domain.Onboarding.OnboardingProcess", null)
                        .WithMany("Steps")
                        .HasForeignKey("ProcessId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.ShipmentBatchItem", b =>
                {
                    b.HasOne("ShippingOrchestrator.Domain.Shipments.ShipmentBatch", null)
                        .WithMany("Items")
                        .HasForeignKey("BatchId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Onboarding.OnboardingProcess", b =>
                {
                    b.Navigation("Steps");
                });

            modelBuilder.Entity("ShippingOrchestrator.Domain.Shipments.ShipmentBatch", b =>
                {
                    b.Navigation("Items");
                });
#pragma warning restore 612, 618
        }
    }
}
